--- a/NW.ipynb
+++ b/NW.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -63,11 +63,10 @@
     "\n",
     "\n",
     "\\begin{align}\n",
-    "\\sigma_{i,j} (u_i,v_j) & = \\max \\left \\{ \\begin{array} {ll}\n",
-    "                                    \\sigma_{i-1,j} - \\sigma \\\\\n",
-    "                                    \\sigma_{i,j-1} - \\sigma \\\\\n",
-    "                                    \\sigma_{i-1,j-1} - \\mu   \\\\\n",
-    "                                    \\sigma_{i-1,j-1} + \\epsilon \\\\\n",
+    "S_{i,j} (u_i,v_j) & = \\max \\left \\{ \\begin{array} {ll}\n",
+    "                                    S_{i-1,j} - \\sigma \\\\\n",
+    "                                    S_{i,j-1} - \\sigma \\\\\n",
+    "                                    S_{i-1,j-1} + \\delta (u_i,v_j) \\\\\n",
     "                        \\end{array} \\right .\n",
     "\\end{align}\n",
     "\n"
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,24 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array([[0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0.],\n",
-      "       [0., 0., 0., 0.]])\n"
+      "array([[0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0.],\n",
+      "       [0., 0., 0., 0., 0.]])\n"
      ]
     }
    ],
    "source": [
     "V = 'CTAA'  # |V| = n\n",
-    "U = 'CTA'   # |U| = m\n",
+    "U = 'CTAA'   # |U| = m\n",
     "S = np.zeros((len(V)+1,len(U)+1))\n",
     "B = np.zeros_like(S)\n",
     "pprint(S)"
@@ -147,18 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array([[ 0., -2., -4., -6.],\n",
-      "       [-2.,  0.,  0.,  0.],\n",
-      "       [-4.,  0.,  0.,  0.],\n",
-      "       [-6.,  0.,  0.,  0.],\n",
-      "       [-8.,  0.,  0.,  0.]])\n"
+      "array([[ 0., -2., -4., -6., -8.],\n",
+      "       [-2.,  0.,  0.,  0.,  0.],\n",
+      "       [-4.,  0.,  0.,  0.,  0.],\n",
+      "       [-6.,  0.,  0.,  0.,  0.],\n",
+      "       [-8.,  0.,  0.,  0.,  0.]])\n"
      ]
     }
    ],
@@ -171,8 +170,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Desupués rellenamos el contenido de la matriz"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,18 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array([[ 0., -2., -4., -6.],\n",
-      "       [-2.,  2.,  0., -2.],\n",
-      "       [-4.,  0.,  4.,  2.],\n",
-      "       [-6., -2.,  2.,  6.],\n",
-      "       [-8., -4.,  0.,  4.]])\n"
+      "array([[ 0., -2., -4., -6., -8.],\n",
+      "       [-2.,  2.,  0., -2., -4.],\n",
+      "       [-4.,  0.,  4.,  2.,  0.],\n",
+      "       [-6., -2.,  2.,  6.,  4.],\n",
+      "       [-8., -4.,  0.,  4.,  8.]])\n"
      ]
     }
    ],
@@ -204,18 +210,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "array([[0., 0., 0., 0.],\n",
-      "       [0., 3., 2., 2.],\n",
-      "       [0., 1., 3., 2.],\n",
-      "       [0., 1., 1., 3.],\n",
-      "       [0., 1., 1., 4.]])\n"
+      "array([[0., 0., 0., 0., 0.],\n",
+      "       [0., 3., 2., 2., 2.],\n",
+      "       [0., 1., 3., 2., 2.],\n",
+      "       [0., 1., 1., 3., 5.],\n",
+      "       [0., 1., 1., 4., 3.]])\n"
      ]
     }
    ],
